パスを更新

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Bees Animation</title>
     <style>
         body {
-            background-image: url('いちご圃場.png'); /* 画像のパスを更新 */
+            background-image: url('いちご圃場.png'); /* 画像のパスを更新 */
             background-size: cover; /* 画像が画面全体に表示されるように設定 */
             background-repeat: no-repeat; /* 画像の繰り返しをなくす */
             background-position: center center; /* 画像を画面の中央に配置 */
